prevent refresh on mobile swipedown

--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,7 @@ body {
   color: limegreen;
   font-family: 'VT323', monospace;
   text-shadow: 3px 3px #666;
-  height: 100vh;
+  height: 90vh;
 }
 
 a {
